Add master and target dbs

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,9 +19,9 @@
 #  TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
 #  PERFORMANCE OF THIS SOFTWARE.
 
-sgmldir = $(sgmlrootdir)/X11
+SUBDIRS = masterdb targetdb
 
-dist_sgml_DATA = defs.ent xorg.css xorg.xsl
+dist_sgmlx11_DATA = defs.ent xorg.css xorg.xsl
 
 pkgconfigdir = $(datadir)/pkgconfig
 pkgconfig_DATA = xorg-sgml-doctools.pc
